depseconfig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gke-demo-sec-config
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gke-demo-sec-config
  template:
    metadata:
      labels:
        app: gke-demo-sec-config
    spec:
      containers:
        - name: app
          image: us-west1-docker.pkg.dev/active-valve-479215-b4/my-docker-art/gek-demo:v4
          ports:
            - containerPort: 8001
          resources:
              requests:
                cpu: "100m"
                memory: "128Mi"
              limits:
                cpu: "250m"
                memory: "256Mi"
