deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
  labels:
    app: product-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: product-service:3.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-deployment
spec:
  selector:
    app: product-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
