sec-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-demo-sec-config-svc
spec:
  type: LoadBalancer
  selector:
    app: gke-demo-sec-config
  ports:
    - port: 8001
      targetPort: 8001
